[project]
name = "llm-inference-server"
version = "1.0.0"
description = "High-throughput LLM inference API with batching and caching"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "httpx==0.27.0",
    "pydantic==2.6.1",
    "redis==5.0.1",
    "matplotlib==3.8.2",
    "python-dotenv==1.0.1",
    "pytest==8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]